--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -3282,14 +3282,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hamza\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -3304,6 +3296,14 @@
       " 3   timestamp  26024289 non-null  int64  \n",
       "dtypes: float64(1), int64(3)\n",
       "memory usage: 794.2 MB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hamza\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
    ],
@@ -3398,8 +3398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "b5d1cc46",
+   "execution_count": 71,
+   "id": "8e8f5bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3409,8 +3409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "0dc9ed4c",
+   "execution_count": 72,
+   "id": "47c63125",
    "metadata": {},
    "outputs": [
     {
@@ -3516,7 +3516,7 @@
        "[6052 rows x 2 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3527,8 +3527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "52141f0d",
+   "execution_count": 73,
+   "id": "17c931d4",
    "metadata": {},
    "outputs": [
     {
@@ -3647,7 +3647,7 @@
        "[438 rows x 2 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3660,8 +3660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "687a3c4f",
+   "execution_count": 74,
+   "id": "e60bed9b",
    "metadata": {},
    "outputs": [
     {
@@ -3722,7 +3722,7 @@
        "[0 rows x 44 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3735,8 +3735,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "ea760f1c",
+   "execution_count": 75,
+   "id": "4eb55007",
    "metadata": {},
    "outputs": [
     {
@@ -3745,7 +3745,7 @@
        "<AxesSubplot:xlabel='running_time', ylabel='runtime'>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3770,8 +3770,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "8d6997ff",
+   "execution_count": 76,
+   "id": "5ba440cf",
    "metadata": {},
    "outputs": [
     {
@@ -3780,7 +3780,7 @@
        "<AxesSubplot:xlabel='budget_wiki', ylabel='budget_kaggle'>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3805,8 +3805,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "cfdaa996",
+   "execution_count": 77,
+   "id": "b825456a",
    "metadata": {},
    "outputs": [
     {
@@ -3815,7 +3815,7 @@
        "<AxesSubplot:xlabel='box_office', ylabel='revenue'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3840,8 +3840,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "823fb706",
+   "execution_count": 78,
+   "id": "17d2d29f",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
        "<AxesSubplot:xlabel='box_office', ylabel='revenue'>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3875,8 +3875,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "ee534297",
+   "execution_count": 79,
+   "id": "a757e3f8",
    "metadata": {},
    "outputs": [
     {
@@ -3885,7 +3885,7 @@
        "<AxesSubplot:xlabel='release_date_wiki'>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3908,8 +3908,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "a3a20140",
+   "execution_count": 80,
+   "id": "22751701",
    "metadata": {},
    "outputs": [
     {
@@ -4014,7 +4014,7 @@
        "[1 rows x 44 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4027,8 +4027,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "b350eb57",
+   "execution_count": 81,
+   "id": "0dcf1af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4037,8 +4037,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "ee06de00",
+   "execution_count": 82,
+   "id": "21174e31",
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4489,7 @@
        "[11 rows x 44 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4500,8 +4500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "70b6b2f6",
+   "execution_count": 83,
+   "id": "f0dbdf41",
    "metadata": {},
    "outputs": [
     {
@@ -4562,7 +4562,7 @@
        "[0 rows x 44 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4573,8 +4573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "3f7cb2bd",
+   "execution_count": 84,
+   "id": "e7b9d13c",
    "metadata": {},
    "outputs": [
     {
@@ -4594,7 +4594,7 @@
        "Name: Language, Length: 198, dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4605,8 +4605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "e5c32acc",
+   "execution_count": 85,
+   "id": "543665e7",
    "metadata": {},
    "outputs": [
     {
@@ -4633,7 +4633,7 @@
        "Name: original_language, dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4644,8 +4644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "4bd27728",
+   "execution_count": 86,
+   "id": "acb9140c",
    "metadata": {},
    "outputs": [
     {
@@ -4764,7 +4764,7 @@
        "[6051 rows x 2 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4775,8 +4775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "687343a0",
+   "execution_count": 87,
+   "id": "87a3e6fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4803,8 +4803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "7e799574",
+   "execution_count": 88,
+   "id": "cd78f1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4813,8 +4813,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "1fbd2645",
+   "execution_count": 89,
+   "id": "8ff9a2c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4832,8 +4832,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "60ec5764",
+   "execution_count": 90,
+   "id": "a0ecc937",
    "metadata": {
     "scrolled": true
    },
@@ -5312,7 +5312,7 @@
        "[6051 rows x 37 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5327,8 +5327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "52c0cbe4",
+   "execution_count": 91,
+   "id": "5c182ee7",
    "metadata": {},
    "outputs": [
     {
@@ -5351,8 +5351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "cf748382",
+   "execution_count": 92,
+   "id": "e67f5257",
    "metadata": {},
    "outputs": [
     {
@@ -5362,7 +5362,7 @@
        "Name: video, dtype: int64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5373,8 +5373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "abed7a99",
+   "execution_count": 93,
+   "id": "88790020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5388,8 +5388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "0e71507d",
+   "execution_count": 94,
+   "id": "f9d05119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5413,8 +5413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "c59ea80c",
+   "execution_count": 95,
+   "id": "02151358",
    "metadata": {},
    "outputs": [
     {
@@ -5661,7 +5661,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5672,11 +5672,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "359fa534",
+   "execution_count": 99,
+   "id": "d7c22d6c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>110</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2015-03-09 22:52:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>147</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>2015-03-09 23:07:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>858</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2015-03-09 22:52:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1221</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2015-03-09 22:52:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1246</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2015-03-09 22:52:36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId               rating           timestamp\n",
+       "0       1      110                 1.00 2015-03-09 22:52:09\n",
+       "1       1      147                 4.50 2015-03-09 23:07:15\n",
+       "2       1      858                 5.00 2015-03-09 22:52:03\n",
+       "3       1     1221                 5.00 2015-03-09 22:52:26\n",
+       "4       1     1246                 5.00 2015-03-09 22:52:36"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "ef455b92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rating_counts = ratings.groupby(['movieId', 'rating'], as_index=False).count() \\\n",
+    "                .rename({'userId': 'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId', columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "f58d9765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "bd43b92b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_rating_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "b340d514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_rating_df[rating_counts.columns] = movies_with_rating_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a8e3347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_rating_df.head()"
+   ]
   }
  ],
  "metadata": {
